--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@reduxjs/toolkit": "^1.9.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
@@ -25,10 +24,10 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.3",
     "react-paginate": "^8.1.4",
-    "react-redux": "^8.0.5",
     "styled-components": "^5.3.6",
     "typescript": "4.8.4",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
