--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "axios": "^1.2.3",
     "firebase": "^9.14.0",
     "next": "^12.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.3",
     "react-paginate": "^8.1.4",
+    "react-query": "^3.39.2",
     "styled-components": "^5.3.6",
     "typescript": "4.8.4",
     "uuid": "^9.0.0",
